<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.SuccessFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contato"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success_title"
            android:gravity="center"
            android:layout_above="@+id/lbl_message"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_message"
            android:text="@string/success_message"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_nova_mensagem"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:text="Enviar nova mensagem"
            android:textColor="@color/buttonNormal"
            android:layout_marginBottom="50dp"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>