<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.InvestimentoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fields_container"
            android:padding="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/investimento"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/send_icon"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_title"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_fund_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:singleLine="false"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/img_separator"
                android:background="@drawable/separator"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/separator" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_what_is"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_definition"
                android:gravity="center"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_risk_title"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold" />

            <include
                android:id="@+id/risk_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                layout="@layout/risk_bar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_info_title"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_mes"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_ano" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/doze_meses" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fundo"
                        android:gravity="end"/>

                    <TextView
                        android:id="@+id/txt_fundo_mes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/txt_fundo_ano"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/txt_fundo_doze_meses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cdi"
                        android:gravity="end"/>

                    <TextView
                        android:id="@+id/txt_cdi_mes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/txt_cdi_ano"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/txt_cdi_doze_meses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/img_separator2"
                android:background="@drawable/separator2"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info_container"
                android:orientation="vertical">
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Investir"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>
            
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>